# arbitrage

./: .gitignore  package-lock.json  package.json  tsconfig.json
admin/: package-lock.json  package.json
admin/amplify/: team-provider-info.json
admin/amplify/.config/: project-config.json
admin/amplify/backend/: backend-config.json
admin/src/: aws-exports.js  aws-exports.ts
admin/src/app/: globals.css  layout.tsx  page.js  page.tsx
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/types/: amplify-dependent-resources-ref.d.ts
kafka/: package.json
kafka/src/: kafkaClient.js  orderHandler.js
orderbook/ingestion/: go.mod  main.go
orderbook/orderstream/: go.mod  main.go
orderbook/ui/: package-lock.json  package.json
orderbook/ui/.next/: trace
orderbook/ui/pages/: index.js  orders.js
orderbookrust/client/: index.html
orderbookrust/client/liveorderbook/: app.js  index.html
orderbookrust/ingestion/: orderbook.db  package-lock.json  package.json  server.js
orderbookrust/matchingengine/: Cargo.toml
orderbookrust/matchingengine/src/: lib.rs  main.rs
orderbookrust/orderstream/: README.md  create-topics.sh  docker-compose.yml
src/: firebaseConfig.jsx
src/app/: globals.css  layout.jsx  loading.jsx  page.jsx
ui/: .gitignore  next.config.mjs  package-lock.json  package.json
ui/amplify/: team-provider-info.json
ui/app/: globals.css
ui/src/: amplify-config.js  aws-exports.js
web/: .gitignore  next.config.mjs  package-lock.json  package.json
(+303 files in other folders)
