[package]
name = "matchingengine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio          = { version = "1", features = ["full"] }
rdkafka        = { version = "0.29", features = ["tokio"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
ordered-float  = "4.6"
futures-util   = "0.3"
chrono         = { version = "0.4", features = ["serde"] }
